# qqchan

./: README.md  main.py  pyproject.toml
src/qqchan/: __init__.py  config.py  db.py  exc.py  service.py  utils.py
