[project]
name = "qqchan"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bail", email = "2915289604@qq.com" }
]
requires-python = ">=3.14"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.5.0",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
